# ece405-assignment3-alignment

./: .gitignore  AGENTS.md  README.md  pyproject.toml
cs336_alignment/: math_baseline.py
cs336_alignment/section4/: compute_entropy.py  get_response_log_probs.py  log_generations.py  masked_normalize.py  sft_experiment.py  sft_microbatch_train_step.py  tokenize_prompt_and_output.py
cs336_alignment/section5/: expert_iteration_experiment.py
cs336_alignment/section7/: __init__.py  compute_group_normalized_rewards.py  compute_grpo_clip_loss.py  compute_grpo_no_clip_loss.py  compute_naive_policy_gradient_loss.py  compute_policy_gradient_loss.py  grpo.py  grpo_experiment.py  grpo_microbatch_train_step.py  masked_mean.py
data/math/: README.md  test.jsonl  val.jsonl
data/section3/math_baseline/report5_section3_full_tp1/: math_baseline_predictions.jsonl  math_baseline_summary.json
data/section4/analysis/: section4_sft_comparison.md
data/section4/sft_experiment/section4_sft_all_20260423-0010_norm1_hparam/lr_1em5/: sweep_summary.json
data/section4/sft_experiment/section4_sft_all_20260423-0010_norm1_hparam/lr_2em5/: sweep_summary.json
data/section4/sft_experiment/section4_sft_all_20260423-0010_norm1_hparam/lr_3em5/: sweep_summary.json
data/section4/sft_experiment/section4_sft_all_20260423-0010_norm1_hparam/lr_5em5/: sweep_summary.json
data/section4/sft_experiment/section4_sft_all_20260423-0010_norm1_hparam/lr_5em6/: sweep_summary.json
data/section4/sft_experiment/section4_sft_all_20260423-0010_norm1_serial/1024/: sweep_summary.json
data/section4/sft_experiment/section4_sft_all_20260423-0010_norm1_serial/128/: sweep_summary.json
data/section4/sft_experiment/section4_sft_filtered_full_20260423-2em5/: sweep_summary.json
data/section5/analysis/section5_ei_full_20260426_fix_sweep/: report_summary.json  section5_expert_iteration_comparison.md
data/section7/analysis/grpo_baselines/: section7_deliverables_placeholder.md  section7_grpo_comparison.md
data/section7/analysis/grpo_group_standard_deviation/: section7_deliverables_placeholder.md  section7_grpo_comparison.md
data/section7/analysis/grpo_learning_rate/: section7_deliverables_placeholder.md  section7_grpo_comparison.md
data/section7/analysis/grpo_length_normalization/: section7_deliverables_placeholder.md  section7_grpo_comparison.md
data/section7/analysis/grpo_off_policy_broad/: section7_deliverables_placeholder.md  section7_grpo_comparison.md
data/section7/analysis/grpo_off_policy_clip_ablation/: section7_deliverables_placeholder.md  section7_grpo_comparison.md
data/section7/analysis/grpo_off_policy_focused/: section7_grpo_comparison.md
data/section7/analysis/grpo_prompt_ablation/: section7_deliverables_placeholder.md  section7_grpo_comparison.md
data/section7/analysis/grpo_train_loop/: section7_deliverables_placeholder.md  section7_grpo_comparison.md
docs/: SECTION7_RUN_ORDER.md  VRAM_TUNING.md
logs/section7/section7_throughput_probe_ga128_gh200/: nvidia_smi.csv
logs/section7/section7_throughput_probe_ga32_gh200/: nvidia_smi.csv
logs/section7/section7_throughput_probe_ga64_gh200/: nvidia_smi.csv
logs/section7/section7_throughput_probe_ga64_gh200_2step/: nvidia_smi.csv
report/: report.tex
scripts/: download_math.py  expert_iteration_experiment.py  generate_section4_report.py  generate_section5_report.py  generate_section7_report.py  grpo_experiment.py  math_baseline.py  run_section3_math_baseline.sh  run_section3_math_baseline_tmux.sh  run_section4_all_sweeps_tmux.sh  run_section4_full_hparam_sweep.sh  run_section4_serial_sweep.sh  run_section5_expert_iteration_sweep.sh  run_section5_full_sweep_tmux.sh  run_section7_baseline_sweep.sh  run_section7_full_sweep_tmux.sh  run_section7_grpo_sweep.sh  run_section7_learning_rate_sweep.sh  run_section7_length_norm_sweep.sh  run_section7_no_clip_ablation.sh  run_section7_off_policy_broad_sweep.sh  run_section7_off_policy_focused_sweep.sh  run_section7_prompt_ablation.sh  run_section7_stdnorm_sweep.sh  run_section7_throughput_probe.sh  sft_experiment.py  vllm-inference.py
scripts/slurm/: run_section7_baseline_sweep.slurm  run_section7_learning_rate_sweep.slurm  run_section7_length_norm_sweep.slurm  run_section7_no_clip_ablation.slurm  run_section7_off_policy_broad_sweep.slurm  run_section7_off_policy_focused_sweep.slurm  run_section7_prompt_ablation.slurm  run_section7_stdnorm_sweep.slurm  section7_slurm_common.sh
tests/: adapters.py  conftest.py  test_grpo.py
(+10426 files in other folders)
